- update ida-plugin.json - include ida-plugin.json to release archive

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,6 @@
 /tests export-ignore
 .gitignore export-ignore
 .gitattributes export-ignore
-ida-plugin.json export-ignore
 LICENSE export-ignore
-README.MD export-ignore
+requirements.txt export-ignore
+README.md export-ignore
